syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/go-auth-system/pb";


service SocialMediaService {
    // Bidirectional streaming RPC for Posts
    rpc PostStream (stream Post) returns (stream Post) {}

    // Unary for creating posts
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse) {}

    // Bidirectional streaming RPC for live comments on a post
    rpc LiveComments(stream Comment) returns (stream Comment);
}

message Post {
    string id = 1;
    string content = 2;
    // Include other fields as necessary
}

message CreatePostRequest {
    string content = 1;
}

message CreatePostResponse {
    string postId = 1;
}

message Comment {
  string postId = 1;
  string userId = 2;
  string content = 3;
  // additional fields as necessary
}