syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/steve-mir/go-auth-system/pb";

message UpdateUserRequest {
    string id = 1;
    optional string email = 2;
    optional string username = 3;
    optional string first_name = 4;
    optional string last_name = 5;
    optional string password = 6;
}

message UpdateUserResponse {
    User user = 1;
}